--- a/app/src/main/res/layout/tutorial_list.xml
+++ b/app/src/main/res/layout/tutorial_list.xml
@@ -16,9 +16,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/greyframe"
         android:paddingBottom="20dp"
         tools:layout_editor_absoluteX="0dp"
@@ -26,12 +26,15 @@
 
         <TextView
             android:id="@+id/tvTutorialTitle"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/orange"
+            android:layout_marginTop="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:background="@color/tertiary"
             android:gravity="center"
             android:text="@string/tutorialname"
-            android:textColor="#000000"
+            android:textColor="@color/text_primary"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -42,15 +45,14 @@
             android:id="@+id/tvTutorialContent"
             android:layout_width="339dp"
             android:layout_height="85dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="26dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="16dp"
-            android:justificationMode="inter_word"
+            android:layout_marginEnd="26dp"
+            android:justificationMode="@color/text_secondary"
             android:text="@string/tutorial"
             android:textColor="#050000"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvuserName" />
 
@@ -93,9 +95,9 @@
             android:id="@+id/imgTutorialImage"
             android:layout_width="339dp"
             android:layout_height="211dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="26dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="26dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
