--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -103,6 +103,18 @@ android:layout_above="@id/introduction"
         />
 
     <TextView
+        android:id="@+id/forgotpassTV"
+        style="@style/TextAppearance.MaterialComponents.Caption"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="260dp"
+        android:layout_below="@id/loginBtn"
+        android:textSize="10dp"
+        android:padding="13dp"
+        android:text="Forgot Password?"
+        android:textColor="@color/white" />
+
+    <TextView
         android:id="@+id/noAccountTv"
         style="@style/TextAppearance.MaterialComponents.Caption"
         android:layout_width="wrap_content"
