--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -8,115 +8,138 @@
 
     <EditText
         android:id="@+id/quesInputTitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="399dp"
+        android:layout_height="28dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="11dp"
+        android:background="@drawable/custom_input1"
         android:ems="10"
-        android:hint="Title"
+        android:hint="  Title"
         android:inputType="textPersonName"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/quesBody"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/quesDesTitle"
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/quesInputBody"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="394dp"
+        android:layout_height="105dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="7dp"
+        android:background="@drawable/custom_input1"
         android:ems="10"
-        android:hint="Body"
+        android:hint="  Body"
         android:inputType="textPersonName"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/quesTags"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/quesDesBody"
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/quesInputTags"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="395dp"
+        android:layout_height="28dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="17dp"
+        android:background="@drawable/custom_input1"
         android:ems="10"
-        android:hint="Tags"
+        android:hint="  Tags"
         android:inputType="textPersonName"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/btnQuesReview"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/quesDesTags"
         tools:ignore="TouchTargetSizeCheck" />
 
     <Button
         android:id="@+id/btnQuesPost"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_width="84dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="94dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="21dp"
+        android:background="@drawable/custom_button"
         android:text="Post"
-        app:layout_constraintEnd_toEndOf="@+id/quesInputTitle"
-        app:layout_constraintHorizontal_bias="0.218"
-        app:layout_constraintStart_toStartOf="@+id/quesInputTitle"
-        app:layout_constraintTop_toBottomOf="@+id/quesInputTags" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnQuesReview"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/quesInputTags"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnQuesReview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_width="93dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="82dp"
+        android:layout_marginBottom="22dp"
+        android:background="@drawable/custom_button"
         android:text="Review"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.75"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnQuesPost"
         app:layout_constraintTop_toBottomOf="@+id/quesInputTags" />
 
     <TextView
         android:id="@+id/quesTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginBottom="11dp"
         android:text="Title"
         android:textSize="20sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/quesDesTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/quesHeader" />
 
     <TextView
         android:id="@+id/quesDesTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="10dp"
         android:text="Be specific and imagine you’re asking a question to another person"
+        android:textAlignment="textStart"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/quesInputTitle"
+        app:layout_constraintBottom_toTopOf="@+id/quesInputTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/quesTitle" />
 
     <TextView
         android:id="@+id/quesBody"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Body"
         android:textSize="20sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/quesDesBody"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/quesInputTitle" />
 
     <TextView
         android:id="@+id/quesDesBody"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="18dp"
         android:text="Include all the information someone would need to answer your question"
+        app:layout_constraintBottom_toTopOf="@+id/quesInputBody"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/quesBody" />
 
@@ -124,11 +147,12 @@
         android:id="@+id/quesTags"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="10dp"
         android:text="Tags"
         android:textSize="20sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/quesDesTags"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/quesInputBody" />
 
@@ -136,21 +160,27 @@
         android:id="@+id/quesDesTags"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="10dp"
         android:text="Describe what your question is about"
+        app:layout_constraintBottom_toTopOf="@+id/quesInputTags"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/quesTags" />
 
     <TextView
         android:id="@+id/quesHeader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
+        android:layout_width="209dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="7dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/custom_input"
         android:text="Ask a public question"
-        android:textSize="24sp"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/quesTitle"
+        app:layout_constraintBottom_toTopOf="@+id/quesTitle"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
