--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,12 +14,12 @@
     <color name="orange_200">#F99F38</color>
 
 <!-- App Color -->
-    <color name="primary">#6E6702</color>
-    <color name="secondary">#2E2300</color>
+    <color name="primary">#454545</color>
+    <color name="secondary">#272727</color>
     <color name="tertiary">#C05805</color>
     <color name="content_primary">#ffae00</color>
     <color name="content_secondary">#DB9501</color>
-    <color name="text_primary">#ECECEC</color>
+    <color name="text_primary">#FFFFFF</color>
     <color name="text_secondary">#1C1C1C</color>
 
     <color name="lightgray">#DFDFDF</color>
