--- a/app/src/main/res/layout/tutorial_list.xml
+++ b/app/src/main/res/layout/tutorial_list.xml
@@ -53,8 +53,9 @@
             android:textColor="#050000"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvuserName" />
+            app:layout_constraintTop_toBottomOf="@+id/tvTutorialTitle" />
 
         <TextView
             android:id="@+id/tvuserName"
@@ -66,30 +67,30 @@
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvTutorialTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/imgTutorialImage" />
 
         <TextView
             android:id="@+id/tvTutorialDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
             android:text="@string/date"
             android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="@+id/tvTutorialTime"
-            app:layout_constraintEnd_toStartOf="@+id/tvTutorialTime"
-            app:layout_constraintTop_toTopOf="@+id/tvTutorialTime"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvuserName" />
 
         <TextView
             android:id="@+id/tvTutorialTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginStart="10dp"
             android:text="@string/time"
             android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvTutorialTitle" />
+            app:layout_constraintBottom_toBottomOf="@+id/tvTutorialDate"
+            app:layout_constraintStart_toEndOf="@+id/tvTutorialDate"
+            app:layout_constraintTop_toTopOf="@+id/tvTutorialDate"
+            app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
             android:id="@+id/imgTutorialImage"
@@ -99,7 +100,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="26dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvTutorialContent"
             tools:srcCompat="@tools:sample/backgrounds/scenic" />
