--- a/app/src/main/res/layout/activity_tutorial_detail.xml
+++ b/app/src/main/res/layout/activity_tutorial_detail.xml
@@ -115,10 +115,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
+                android:layout_marginTop="19dp"
                 android:text="totalLike"
                 android:textColor="#3F51B5"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="365dp" />
+                app:layout_constraintTop_toBottomOf="@+id/tvDate" />
 
             <TextView
                 android:id="@+id/tvTotalComment"
